<resources>
    <string name="app_name">IGNOU Tutor Pro</string>
	<string name="app_name_pro">IGNOU Tutor Pro</string>
	<string name="app_name_adfree">IGNOU Tutor Adfree</string>
    <string name="login.title">IGNOU Tutor Login</string>
    <string name="login.hint.email">Email</string>
    <string name="login.hint.password">Password</string>
    <string name="login.button.login">Login</string>
    <string name="login.button.forgot">Forgot your password ?</string>
    <string name="login.text.register">Not a user yet?</string>
    <string name="login.button.register">Register now</string>
    <string name="login.dialog.progress">Please wait</string>
    <string name="login.dialog.registration.title">Create a new account</string>
    <string name="login.dialog.forgot.title">Type your email address</string>
    <string name="login.dialog.forgot.text">Check your inbox and follow the instructions to reset your password</string>
    <string name="login.dialog.forgot.ok">Ok</string>
    <string name="login.dialog.forgot.close">Close</string>
    <string name="login.snackbar.password.short">Password cannot be empty</string>
    <string name="login.snackbar.email.error">Email is not valid</string>
    <string name="login.snackbar.email.short">Email cannot be empty</string>
    <string name="login.toast.googleauth.error">Authentication failed.</string>
    <string name="login.toast.googleservices.error">Google Play Services error.</string>
    <string name="registration.title">Registration</string>
    <string name="registration.hint.email">Email</string>
    <string name="registration.hint.password">Password</string>
    <string name="registration.hint.confirm">Confirm Password</string>
    <string name="registration.button.register">Register</string>
    <string name="registration.text.login">Already have an account ?</string>
    <string name="registration.button.login">Login</string>
    <string name="registration.dialog.title">Welcome</string>
    <string name="registration.dialog.text">Verify your email by clicking the link we sent you to your inbox</string>
    <string name="registration.dialog.positive">Close</string>
    <string name="registration.snackbar.password.short">Password must be longer than 8 character</string>
    <string name="registration.snackbar.password.error">Passwords doesn\'t match</string>
    <string name="registration.snackbar.email.short">Email cannot be empty</string>
    <string name="registration.snackbar.email.error">Email is not valid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="main.invite.title">Invite</string>
    <string name="main.invite.message">Join me to IGNOU chat</string>
    <string name="main.invite.cta">Call to Action</string>
    <string name="main.toast.logout.message">Logged out</string>
    <string name="main.toast.exit.message">Please click BACK again to exit</string>
    <string name="main.dialog.text.wait">Please wait upgrading the database for the first launch</string>
    <string name="main.toolbar.menu.search">Search</string>
    <string name="firstlogin.title">Profile</string>
    <string name="firstLogin.button.next">Start</string>
    <string name="drawer.logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="chat.hint.message">Message</string>
    <string name="chat.textview.typing"> is typing…</string>
    <string name="chat.toolbar.lastseen.online">Online</string>
    <string name="chat.toolbar.lastseen.offline.today">Last seen today at time</string>
    <string name="chat.toolbar.lastseen.offline">Last seen on date at time</string>
    <string name="profile.toolbar.title">Profile</string>
    <string name="profile.button.delete">Delete Account</string>
    <string name="profile.hint.name">Full Name</string>
    <string name="profile.hint.password">Change Password</string>
    <string name="profile.dialog.name.title">Type your name</string>
    <string name="profile.dialog.password.title">Type your new password</string>
    <string name="profile.toast.password.negative">An error occured while changing the password</string>
    <string name="profile.toast.password.positive">Password has been changed successfully</string>
    <string name="profile.dialog.remove.content">Are you sure you want to delete this account permanently?</string>
    <string name="profile.dialog.remove.positive">Confirm</string>
    <string name="profile.dialog.remove.negative">Cancel</string>
    <string name="profile.dialog.input.close">Close</string>
    <string name="profile.dialog.upload.title">Uploading Image</string>
    <string name="profile.dialog.upload.message">Please Wait...</string>
    <string name="users.toolbar.title">"Users List"</string>
    <string name="users.toolbar.search.hint">Search...</string>
    <string name="conversations.toolbar.title">Conversations</string>
    <string name="conversations.conversation.item.today">Today</string>
    <string name="conversations.conversation.item.yesterday">Yesterday</string>
    <string name="global.toolbar.title">IGNOU Room</string>
    <string name="ex_header_1">Courses</string>
    <string name="ex_header_2">Study materials</string>
    <string name="ex_header_3">Notes</string>
    <string name="ex_header_4">IGNOU links</string>
    <string name="ex_header_5">Solved assignments</string>
    <string name="ex_header_6">Forms</string>
    <string name="ex_header_7">Prospectus</string>
    <string name="ex_header_8">More</string>
    <string name="opt_1_1">BCA</string>
    <string name="opt_1_2">MCA</string>
    <string name="opt_1_3">BA</string>
    <string name="opt_1_4">BCA question papers</string>
    <string name="opt_1_5">MCA question papers</string>
    <string name="opt_1_6">Other question papers</string>
    <string name="opt_2_1">BCA materials</string>
    <string name="opt_2_2">MCA materials</string>
    <string name="opt_2_3">CIT materials</string>
    <string name="opt_2_4">Other materials</string>
    <string name="opt_3_1">Business organization</string>
    <string name="opt_3_2">C language</string>
    <string name="opt_3_3">C++ language</string>
    <string name="opt_3_4">English grammar</string>
    <string name="opt_3_5">Java language</string>
    <string name="opt_3_6">Assembly programming and microprocessor</string>
    <string name="opt_3_7">Data communications and networks</string>
    <string name="opt_3_8">Data structures</string>
    <string name="opt_3_9">Database management system</string>
    <string name="opt_3_10">Internet technology</string>
    <string name="opt_3_11">Operating system</string>
    <string name="opt_3_12">Relational database management system</string>
    <string name="opt_3_13">Software engineering</string>
    <string name="opt_3_14">Software engineering ii</string>
    <string name="opt_4_1">IGNOU home</string>
    <string name="opt_4_2">Login</string>
    <string name="opt_4_3">Grade card</string>
    <string name="opt_4_4">Assignments</string>
    <string name="opt_4_5">Downloads</string>
    <string name="opt_4_6">Student zone</string>
    <string name="opt_4_7">Egyankosh</string>
    <string name="opt_4_8">Bulletin board</string>
    <string name="opt_4_9">Exam status</string>
    <string name="opt_4_10">Assignment status</string>
    <string name="opt_4_11">Study material download</string>
    <string name="opt_4_12">Exam results</string>
    <string name="opt_5_1">BCA assignments solutions</string>
    <string name="opt_5_2">MCA assignments solutions</string>
    <string name="opt_6_1">Term end examination form</string>
    <string name="opt_6_2">Reevaluation of answer scripts</string>
    <string name="opt_6_3">Application form for reimbursement of fee</string>
    <string name="opt_6_4">Duplicate degree,diploma and certificate</string>
    <string name="opt_6_5">Duplicate mark sheet form</string>
    <string name="opt_6_6">Official transcript form</string>
    <string name="opt_6_7">Application for early declaration of result</string>
    <string name="opt_6_8">Improvement form</string>
    <string name="opt_6_9">Form for obtaining photocopy of the answer script</string>
    <string name="opt_6_10">Form for change of medium, course of study</string>
    <string name="opt_6_11">Application for migration certificate</string>
    <string name="opt_7_1">Common prospectus english</string>
    <string name="opt_7_2">Common prospectus hindi</string>
    <string name="opt_7_3">MBA prospectus</string>
    <string name="opt_8_1">Maths puzzle</string>
    <string name="opt_8_2">Youtube classes</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="mopub_banner_id" translatable="false">f4b6b609b5ee4543aec97c8ccf4fd546</string>
    <string name="mopub_interstitial_id" translatable="false">1214869a62cf426e847689399b2a337d</string>
    <string name="mopub_video_id" translatable="false">b6b900a9fcea4cafab72cbf351efc99f</string>
    <string name="mopub_banner_test" translatable="false">b195f8dd8ded45fe847ad89ed1d016da</string>
    <string name="mopub_interstitial_test" translatable="false">24534e1901884e398f1253216226017e</string>
    <string name="mopub_video_test" translatable="false">920b6145fb1546cf8b5cf2ac34638bb7</string>
    <string name="fan_banner_id" translatable="false">188306292320931_188317988986428</string>
    <string name="fan_interstitial_id" translatable="false">188306292320931_188318735653020</string>
<string name="facebook_app_id">188306292320931</string>
<string name="fb_login_protocol_scheme">fb188306292320931</string>
    <string name="syllabus" translatable="false">SYLLABUS</string>
    <string name="syllabus_2">   SYLLABUS   </string>
    <string name="summary_2">   SUMMARY   </string>
    <string name="enter_name">Country Name</string>
    <string name="add_record">Add Note</string>
    <string name="btn_update">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No notes found.\n Press \u2295 to add. </string>
    <string name="enter_desc">Text</string>
    <string name="enter_title">Title</string>
    <string name="study_Material">STUDY MATERIAL</string>
    <string name="login">LOGIN</string>
    <string name="question_papers">QUESTION PAPERS</string>
    <string name="course">COURSE</string>
    <string name="course_bca">COURSE:BCA</string>
    <string name="course_mca">COURSE:MCA</string>
    <string name="course_ba">COURSE:BA</string>
    <string name="course_bcom">COURSE:B.COM</string>
    <string name="syl_2016_2017">2016–2017</string>
    <string name="syl_2017_2018">2017–2018</string>
    <string name="syl_2018_2019">2018–2019</string>
    <string name="semester1">SEMESTER 1</string>
    <string name="semester2">SEMESTER 2</string>
    <string name="semester3">SEMESTER 3</string>
    <string name="semester4">SEMESTER 4</string>
    <string name="FEG_02">FEG-02</string>
    <string name="BCSL_033">BCSL-033</string>
    <string name="FEG_01">FEG-01</string>
    <string name="FST_01">FST-01</string>
    <string name="BHDF_01">BHDF-01</string>
    <string name="FHS_01">FHS-01</string>
    <string name="FML_01">FML-01</string>
    <string name="BEGE_101">BEGE-101</string>
    <string name="EEG_02">EEG-02</string>
    <string name="EEG_03">EEG-03</string>
    <string name="EEG_04">EEG-04</string>
    <string name="EEG_05">EEG-05</string>
    <string name="EEG_06">EEG-06</string>
    <string name="EEG_07">EEG-07</string>
    <string name="EEG_08">EEG-08</string>
    <string name="AFW_E">AFW-(E)</string>
    <string name="AWR_E">AWR-(E)</string>
    <string name="AWR_H">AWR-(H)</string>
    <string name="select_content">Select Content : </string>
    <string name="year1">Year 1</string>
    <string name="year2">Year 2</string>
    <string name="year3">Year 3</string>
</resources>